--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+label {
+    padding-right: .5rem;
+}
+
+input {
+    margin-right: .5rem;
+}
+
 .header {
     padding: 0 1rem;
 }
@@ -9,6 +17,14 @@ body {
 .main-container {
     margin: auto;
     width: 50%;
+}
+
+#correct-incorrect {
+    clear: both;
+    padding-top: 0.5rem;
+    font-family: cursive;
+    color: #777777;
+    border-top: 1px solid #7777;
 }
 
 #timer {
@@ -24,6 +40,10 @@ body {
     float: left;
     clear: left;
     margin: 0.25rem 0;
+}
+
+#opt4 {
+    margin-bottom: 2rem;
 }
 
 /* .buttons:hover {
