added styling to alternate li rows. added questions to quiz. final edits before publishing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ input {
     margin-right: .5rem;
 }
 
+li {
+    background: white; 
+    padding-left: 1rem;
+}
+
+li:nth-child(odd) { background: #7777;
+}
+
 .header {
     padding: 0 1rem;
 }
